--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,24 @@ language: python
 python: 
   - '3.8'
 
+before_install:
+
+  # Here we just install Miniconda, which you shouldn't have to change.
+
+  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+  - chmod +x miniconda.sh
+  - ./miniconda.sh -b
+  - export PATH=/home/travis/miniconda/bin:$PATH
+  - conda update --yes conda
+
+install:
+
+  # We just set up a conda environment with the right Python version. This
+  # should not need changing.
+
+  - conda create -f environment.yml
+  - source activate mrsensemakr
+
 script:
   - make -C docs/ html
   - touch docs/build/html/.nojekyll
