--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ install:
   - source activate mrsensemakr
 
 script:
+  - export PATH="$HOME/virtualenv/python3.8/bin":$PATH
   - make -C docs/ html
   - touch docs/build/html/.nojekyll
 deploy:
