--- a/.travis.yml
+++ b/.travis.yml
@@ -26,10 +26,11 @@ script:
   - make -C docs/ html
   - touch docs/build/html/.nojekyll
 deploy:
-  - provider: pages:git
+  - provider: pages
     on:
       branch: master
   - verbose: true
+  - skip_cleanup: true
   - token: $GITHUB_TOKEN
   - edge: true
   - local_dir: ./docs/build/html/
